--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,13 @@
 akka.persistence {
 
-  journal.plugin = "kafka-journal"
+  journal.plugin = "cassandra-journal"
+
+//  journal.plugin = "kafka-journal"
+
+  // i think this might only have a big effect if we're using persistAsync
+//  journal {
+//    max-message-batch-size = 2000
+//  }
 
 }
 
