Adding spike to test kafka send rates

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,14 +1,10 @@
 akka.persistence {
+//  journal.plugin = "cassandra-journal"
+  journal.plugin = "kafka-journal"
+}
 
-  journal.plugin = "cassandra-journal"
-
-//  journal.plugin = "kafka-journal"
-
-  // i think this might only have a big effect if we're using persistAsync
-//  journal {
-//    max-message-batch-size = 2000
-//  }
-
+kafka-journal {
+  event.producer.topic.mapper.class = "akka.persistence.kafka.EmptyEventTopicMapper"
 }
 
 akka.actor {
